apps/base/productivity/send2ereader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName send2ereader-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - name: send2ereader
          image: ghcr.io/abayomi185/send2ereader:latest@sha256:34eae4f5e54e5d914c8fefc5a876f680b6db909f8f56607c403d09408bd2a2c7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 30Mi
            limits:
              cpu: 200m
              memory: 100Mi
