apps/base/productivity/send2ereader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: send2ereader-service
spec:
  selector:
    app: send2ereader-deployment
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
