apps/base/productivity/send2ereader/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: send2ereader
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`send2ereader.local.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-forward-auth
          namespace: network-system
      services:
        - name: send2ereader-service
          port: 3001
  tls:
    certResolver: letsencrypt
